# app/handler/product.py
@@ -1,10 +1,10 @@
 from connexion import NoContent
 
-from app.handler.db import dbconn
-from app.utils import strip_column_prefix
+from app.db import dbconn
+from app.utils import strip_column_prefix, slugger
 
 
-def get_products():
+def get():
     with dbconn() as conn:
         cur = conn.cursor()
         cur.execute('''SELECT p.*, pg_name AS pg_product_group_name, pg_slug AS pg_product_group_slug, pg_department
@@ -15,13 +15,21 @@ def get_products():
     return res
 
 
-def add_product(product):
+def add(product):
     with dbconn() as conn:
         cur = conn.cursor()
         cur.execute(
-            '''INSERT INTO zsm_data.product (p_product_group_id, p_name, p_slug, p_delivery_team)
-              VALUES (%s, %s, %s, %s)''',
-            (product['product_group_id'], product['name'], product['slug'], product['delivery_team']))
+            '''INSERT INTO zsm_data.product (p_name, p_slug, p_product_group_id)
+              VALUES (%s, %s, (SELECT pg_id FROM zsm_data.product_group WHERE pg_slug = %s))''',
+            (product['name'], slugger(product['name']), product['product_group']))
         conn.commit()
         cur.close()
         return NoContent, 201
+
+
+def delete(product):
+    with dbconn() as conn:
+        cur = conn.cursor()
+        cur.execute('''DELETE FROM zsm_data.product WHERE p_slug = %s''', (product,))
+        conn.commit()
+        return (NoContent, 200,) if cur.rowcount else (NoContent, 404,)
