# app/handler/product_groups.py
@@ -1,17 +1,19 @@
 from connexion import NoContent
 
-from app.handler.db import dbconn
+from app.db import dbconn
+from app.utils import strip_column_prefix, slugger
 
 
-def get_product_groups():
+def get():
     with dbconn() as conn:
         cur = conn.cursor()
         cur.execute('''SELECT pg_name, pg_slug, pg_department FROM zsm_data.product_group''')
         rows = cur.fetchall()
-        return rows
+        res = [strip_column_prefix(r._asdict()) for r in rows]
+        return res
 
 
-def add_product_group(product_group):
+def add(product_group):
     with dbconn() as conn:
         cur = conn.cursor()
         cur.execute('''INSERT INTO zsm_data.product_group (pg_name, pg_department, pg_slug) VALUES (%S, %S, %S)''',
@@ -19,3 +21,11 @@ def add_product_group(product_group):
         conn.commit()
         cur.close()
         return NoContent, 201
+
+
+def delete(pg_slug: str):
+    with dbconn() as conn:
+        cur = conn.cursor()
+        cur.execute('''DELETE FROM zsm_data.product_group WHERE pg_slug = %s''', (pg_slug,))
+        conn.commit()
+        return (NoContent, 404) if not cur.rowcount else (NoContent, 200)
